--- a/thirdDime/templates/index.html
+++ b/thirdDime/templates/index.html
@@ -53,8 +53,6 @@
 		<!-- start Mixpanel --><script type="text/javascript">(function(f,b){if(!b.__SV){var a,e,i,g;window.mixpanel=b;b._i=[];b.init=function(a,e,d){function f(b,h){var a=h.split(".");2==a.length&&(b=b[a[0]],h=a[1]);b[h]=function(){b.push([h].concat(Array.prototype.slice.call(arguments,0)))}}var c=b;"undefined"!==typeof d?c=b[d]=[]:d="mixpanel";c.people=c.people||[];c.toString=function(b){var a="mixpanel";"mixpanel"!==d&&(a+="."+d);b||(a+=" (stub)");return a};c.people.toString=function(){return c.toString(1)+".people (stub)"};i="disable track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config people.set people.set_once people.increment people.append people.track_charge people.clear_charges people.delete_user".split(" ");
 for(g=0;g<i.length;g++)f(c,i[g]);b._i.push([a,e,d])};b.__SV=1.2;a=f.createElement("script");a.type="text/javascript";a.async=!0;a.src="//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";e=f.getElementsByTagName("script")[0];e.parentNode.insertBefore(a,e)}})(document,window.mixpanel||[]);
 mixpanel.init("fe0995bebb3e1c6aa8aecf2900a4aff0");</script><!-- end Mixpanel -->
-
-		<script src="//load.sumome.com/" data-sumo-site-id="9ce2a3715beeef6502ec5c9fa90ef442f11e8351dd80f602b0ba50e5ca3c88b3" async></script>
 		
 	</head>
 	<body ng-controller="AppController">
@@ -74,17 +72,19 @@ mixpanel.init("fe0995bebb3e1c6aa8aecf2900a4aff0");</script><!-- end Mixpanel -->
 					<div layout="row" layout-sm="column" layout-align="space-between center">
 						<div layout="row" layout-align="center center" class="animate-show"  ng-show="isVisibleRoot" flex="33" hide-sm>
 							<input type="email" placeholder="  E-mail" ng-model="user.email" style="border-radius: 10px; height: 50px;" />
-							<md-button ng-click="sendUser(1)" style="background: #1975D1; border-radius: 10px; height: 50px; color: white; padding-right: 30px; padding-left: 20px">Subscribe</md-button>
+							<md-button ng-click="sendUser(1)" style="background: #1975D1; border-radius: 10px; height: 50px; color: white; padding-right: 30px; padding-left: 20px"  analytics-on="click"  analytics-event="Subscribe1">
+								Subscribe
+							</md-button>
 						</div>
 						<div layout="row" layout-align="center center" class="animate-show"  ng-hide="isVisibleRoot" flex="33">
 							<h4 ng-hide="isVisible1">Thank you. Please keep exploring.</h4>
 						</div>
 						<div flex="33">
-							<a href="#one" class="button style2 down">More</a>
+							<a href="#one" class="button style2 down"  analytics-on="click"  analytics-event="Down1">More</a>
 						</div>
 						<a href="#quiz" flex="33">
-							<md-button layout-fill style="background: #1975D1; border-radius: 10px;  color: white;" show-md hide-sm>Take Thought Quiz</md-button>
-							<md-button layout-fill style="background: #1975D1; border-radius: 10px;  color: white;" hide-md hide-gt-md> Quiz </md-button>
+							<md-button layout-fill  analytics-on="click" analytics-event="TakeQuiz-lptp" style="background: #1975D1; border-radius: 10px;  color: white;" show-md hide-sm>Take Thought Quiz</md-button>
+							<md-button layout-fill  analytics-on="click" analytics-event="TakeQuiz-mb" style="background: #1975D1; border-radius: 10px;  color: white;" hide-md hide-gt-md> Quiz </md-button>
 						</a>
 					</div>
 				</div>
@@ -99,13 +99,13 @@ mixpanel.init("fe0995bebb3e1c6aa8aecf2900a4aff0");</script><!-- end Mixpanel -->
 					<p>Explore thoughts, art can inspire, through <strong>interpretations</strong> and <strong>stories</strong>. Browse though a large collection of paintings and discover deeper layers behind each brushstroke.</p>
 					<div layout="row" layout-align="center center" class="animate-show"  ng-show="isVisibleRoot">
 						<input type="email" placeholder="  E-mail" ng-model="user.email" style="border-radius: 10px; height: 50px;" />
-						<md-button ng-click="sendUser(2)" style="background: #1975D1;  border-radius: 10px; height: 50px; color: white; padding: 10px 10px;">Subscribe</md-button>
+						<md-button ng-click="sendUser(2)" style="background: #1975D1;  border-radius: 10px; height: 50px; color: white; padding: 10px 10px;"  analytics-on="click" analytics-event="Subscribe2">Subscribe</md-button>
 					</div>
 					<div layout="row" layout-align="center center" class="animate-show"  ng-hide="isVisible2">
 						<h4>ThankYou. Please keep Exploring.</h4>
 					</div>
 				</div>
-				<a href="#two" class="button style2 down anchored">Next</a>
+				<a href="#two" class="button style2 down anchored" analytics-on="click"  analytics-event="Down2">Next</a>
 			</section>
 		
 		<!-- Two -->
@@ -116,7 +116,7 @@ mixpanel.init("fe0995bebb3e1c6aa8aecf2900a4aff0");</script><!-- end Mixpanel -->
 					</header>
 					<p>Meanwhile ,take our thought quiz to quench your curiosity. <strong>Dive deeper</strong> and find out what you see.</p>
 				</div>
-				<a href="#quiz" class="button style2 down anchored">Next</a>
+				<a href="#quiz" class="button style2 down anchored" analytics-on="click"  analytics-event="Down3">Next</a>
 			</section>
 			
 		<!-- Work -->
@@ -137,10 +137,10 @@ mixpanel.init("fe0995bebb3e1c6aa8aecf2900a4aff0");</script><!-- end Mixpanel -->
 						     data-description="'Behind the BrushStrokes'"
 						     data-image="'http://thirddime.com/static/images/p2.jpg'">
 						    <li> SHARE QUIZ:</li>
-						    <li class="ng-social-facebook">FaceBook</li>
-						    <li class="ng-social-google-plus">Google+</li>
-						    <li class="ng-social-twitter">Twitter</li>
-						    <li class="ng-social-pinterest">Pinterest</li>
+						    <li class="ng-social-facebook" analytics-on="click"  analytics-event="SocSharePostQuizFB">FaceBook</li>
+						    <li class="ng-social-google-plus" analytics-on="click"  analytics-event="SocSharePostQuizG+">Google+</li>
+						    <li class="ng-social-twitter" analytics-on="click"  analytics-event="SocSharePostQuizTwtr">Twitter</li>
+						    <li class="ng-social-pinterest" analytics-on="click"  analytics-event="SocSharePostQuizPin">Pinterest</li>
 						</ul>
 					</div>
 				</div>
@@ -166,7 +166,7 @@ mixpanel.init("fe0995bebb3e1c6aa8aecf2900a4aff0");</script><!-- end Mixpanel -->
 							<form name="contactForm">
 								<div layout="row" layout-sm="column" layout-align="center center">
 									<div flex="50"><div layout="row"><input type="email" name="email" placeholder="Email" ng-model="user.email" style="border: 2px solid #dadada;" /></div></div>
-									<div flex="50"><input type="submit" class="active" ng-disabled="contactForm.$dirty && contactForm.$invalid" value="Keep me posted !" ng-click="sendUser(3)" style="border-radius: 10px;" /></div>
+									<div flex="50"><input type="submit" class="active" ng-disabled="contactForm.$dirty && contactForm.$invalid" value="Keep me posted !" ng-click="sendUser(3)" style="border-radius: 10px;" analytics-on="click"  analytics-event="Subscribe3"/></div>
 								</div>
 							</form>
 						</div>
@@ -179,17 +179,17 @@ mixpanel.init("fe0995bebb3e1c6aa8aecf2900a4aff0");</script><!-- end Mixpanel -->
 								<div layout="row" layout-align="center center">
 									<div flex="33">
 										<a href="http://www.pinterest.com/thirddime/thirddime-art/" target="_blank">
-								        <img src="/static/images/social/pinterest.png" style="height: 75px; width: 75px" />
+								        <img src="/static/images/social/pinterest.png" style="height: 75px; width: 75px" analytics-on="click"  analytics-event="SocialPagePin"/>
 								        </a>	
 								    </div>
 									<div flex="33">
 										<a href="https://twitter.com/thirddime" target="_blank">
-								        <img src="/static/images/social/twitter.png" style="height: 75px; width: 75px" />
+								        <img src="/static/images/social/twitter.png" style="height: 75px; width: 75px" analytics-on="click"  analytics-event="SocialPageTwtr"/>
 								        </a>
 								    </div>
 									<div flex="33">
 										<a href="https://www.facebook.com/pages/ThirdDime-Art/1518696245078520?fref=ts" target="_blank">
-								        <img src="/static/images/social/facebook.png" style="height: 75px; width: 75px" />
+								        <img src="/static/images/social/facebook.png" style="height: 75px; width: 75px" analytics-on="click"  analytics-event="SocialPageFB"/>
 								        </a>
 								    </div>
 								</div>
@@ -220,6 +220,9 @@ mixpanel.init("fe0995bebb3e1c6aa8aecf2900a4aff0");</script><!-- end Mixpanel -->
 	    <script src="static/bower_components/angular-aria/angular-aria.js"></script>
 	    <script src="static/bower_components/hammerjs/hammer.js"></script>
 	    <script src="static/bower_components/angular-animate/angular-animate.min.js"></script>
+	    <script src="static/bower_components/angulartics/dist/angulartics.min.js"></script>
+	    <script src="static/bower_components/angulartics/dist/angulartics-ga.min.js"></script>
+	    <script src="static/bower_components/angulartics/dist/angulartics-mixpanel.min.js"></script>
 
 	    <!-- build:js static/build/third.js -->
 		<script src="static/vendor/original/jquery.poptrox.min.js"></script>
@@ -243,13 +246,6 @@ mixpanel.init("fe0995bebb3e1c6aa8aecf2900a4aff0");</script><!-- end Mixpanel -->
 
 		<script pagespeed_no_defer>(function(){var g=encodeURIComponent,h=window,k=document,l="width",m="documentElement",n="height",p="length",q=this,r=function(b,d){var a=b.split("."),c=q;a[0]in c||!c.execScript||c.execScript("var "+a[0]);for(var e;a[p]&&(e=a.shift());)a[p]||void 0===d?c[e]?c=c[e]:c=c[e]={}:c[e]=d};var t=function(b){var d=b[p];if(0<d){for(var a=Array(d),c=0;c<d;c++)a[c]=b[c];return a}return[]};var u=function(b){var d=h;if(d.addEventListener)d.addEventListener("load",b,!1);else if(d.attachEvent)d.attachEvent("onload",b);else{var a=d.onload;d.onload=function(){b.call(this);a&&a.call(this)}}};var v,w=function(b,d,a,c,e){this.f=b;this.h=d;this.i=a;this.c=e;this.e={height:h.innerHeight||k[m].clientHeight||k.body.clientHeight,width:h.innerWidth||k[m].clientWidth||k.body.clientWidth};this.g=c;this.b={};this.a=[];this.d={}},x=function(b,d){var a,c,e=d.getAttribute("pagespeed_url_hash");if(a=e)if(a=!(e in b.d))if(0>=d.offsetWidth&&0>=d.offsetHeight)a=!1;else{c=d.getBoundingClientRect();var f=k.body;a=c.top+("pageYOffset"in h?h.pageYOffset:(k[m]||f.parentNode||f).scrollTop);c=c.left+("pageXOffset"in
 h?h.pageXOffset:(k[m]||f.parentNode||f).scrollLeft);f=a.toString()+","+c;b.b.hasOwnProperty(f)?a=!1:(b.b[f]=!0,a=a<=b.e[n]&&c<=b.e[l])}a&&(b.a.push(e),b.d[e]=!0)};w.prototype.checkImageForCriticality=function(b){b.getBoundingClientRect&&x(this,b)};r("pagespeed.CriticalImages.checkImageForCriticality",function(b){v.checkImageForCriticality(b)});r("pagespeed.CriticalImages.checkCriticalImages",function(){y(v)});var y=function(b){b.b={};for(var d=["IMG","INPUT"],a=[],c=0;c<d[p];++c)a=a.concat(t(k.getElementsByTagName(d[c])));if(0!=a[p]&&a[0].getBoundingClientRect){for(c=0;d=a[c];++c)x(b,d);a="oh="+b.i;b.c&&(a+="&n="+b.c);if(d=0!=b.a[p])for(a+="&ci="+g(b.a[0]),c=1;c<b.a[p];++c){var e=","+g(b.a[c]);131072>=a[p]+e[p]&&(a+=e)}b.g&&(e="&rd="+g(JSON.stringify(z())),131072>=a[p]+e[p]&&(a+=e),d=!0);A=a;if(d){c=b.f;b=b.h;var f;if(h.XMLHttpRequest)f=new XMLHttpRequest;else if(h.ActiveXObject)try{f=new ActiveXObject("Msxml2.XMLHTTP")}catch(s){try{f=new ActiveXObject("Microsoft.XMLHTTP")}catch(B){}}f&&(f.open("POST",c+(-1==c.indexOf("?")?"?":"&")+"url="+g(b)),f.setRequestHeader("Content-Type","application/x-www-form-urlencoded"),f.send(a))}}},z=function(){var b={},d=k.getElementsByTagName("IMG");if(0==d[p])return{};var a=d[0];if(!("naturalWidth"in a&&"naturalHeight"in a))return{};for(var c=0;a=d[c];++c){var e=a.getAttribute("pagespeed_url_hash");e&&(!(e in b)&&0<a[l]&&0<a[n]&&0<a.naturalWidth&&0<a.naturalHeight||e in b&&a[l]>=b[a.src].k&&a[n]>=b[a.src].j)&&(b[e]={rw:a[l],rh:a[n],ow:a.naturalWidth,oh:a.naturalHeight})}return b},A="";r("pagespeed.CriticalImages.getBeaconData",function(){return A});r("pagespeed.CriticalImages.Run",function(b,d,a,c,e,f){var s=new w(b,d,a,e,f);v=s;c&&u(function(){h.setTimeout(function(){y(s)},0)})});})();pagespeed.CriticalImages.Run('/ngx_pagespeed_beacon','https://material.angularjs.org/demo-partials/dialog/demoBasicUsage/dialog1.tmpl.html','q9UknjHyEp',true,false,'WBOZqEn5IIQ');</script>
-	<script type="text/javascript">
-		 function _pcm(u){setTimeout(function(){
-		  var d=document, p="//desv383oqqc0.cloudfront.net/",
-		  s=d.createElement("script");s.type="text/javascript";s.async=true;s.src=p+u+".js";
-		  var e=d.getElementsByTagName("script")[0];e.parentNode.insertBefore(s,e);
-		 },1);}_pcm("54b6f1ec4ef5760200000007");
-	</script>
 
 	</body>
 </html>
